# docs/openapi.yaml
@@ -119,7 +119,7 @@ paths:
           required: true
           schema:
             type: string
-        - name: playlistId
+        - name: playlistTitle
           in: path
           required: true
           schema:
@@ -134,51 +134,6 @@ paths:
                 properties:
                   playlist:
                     $ref: "#/components/schemas/Playlist"
-
-  /users/{userId}/playlists/id/{playlistId}:
-    delete:
-      deprecated: false
-      summary: Delete playlist by playlistId
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: playlistId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        204:
-          description: notify deletion
-    patch:
-      summary: Change the playlist title
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: playlistId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                newTitle:
-                  type: string
-                  example: 朝聴きたいプレイリスト
-      responses:
-        204:
-          description: notify change
 
   /users/{userId}/playlists/title/{playlistTitle}/videos:
     post:
@@ -214,6 +169,134 @@ paths:
                 properties:
                   message:
                     type: string
+
+  /users/{userId}/playlists/title/{playlistTitle}/videos/{memberId}:
+    delete:
+      summary: Delete video from playlist by memberId
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: memberId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        204:
+          description: notify deletion
+
+  /users/{userId}/playlists/id/{playlistId}:
+    get:
+      summary: Get playlist from userId and playlistTitle
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: success response containing playlist
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  playlist:
+                    $ref: "#/components/schemas/Playlist"
+    delete:
+      deprecated: false
+      summary: Delete playlist by playlistId
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        204:
+          description: notify deletion
+
+  /users/{userId}/playlists/id/{playlistId}/videos:
+    post:
+      summary: Add new video to an already existing playlist
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                videoId:
+                  type: string
+                  example: DHGOI"%$&KMSSM
+      responses:
+        201:
+          description: success response containing a message that the new video has been added
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
+  /users/{userId}/playlists/id/{playlistId}/title:
+    patch:
+      summary: Change the playlist title
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                newTitle:
+                  type: string
+                  example: 朝聴きたいプレイリスト
+      responses:
+        204:
+          description: notify change
 
   /sessions/{provider}:
     post:
